<resources>
    <string name="app_name">Inventory</string>

    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <string name="action_delete_all_entries">Delete All Products</string>

    <string name="editor_activity_title_new_product">Add a Product</string>

    <string name="editor_activity_title_edit_product">Edit Product</string>

    <string name="action_save">Save</string>

    <string name="action_delete">Delete</string>

    <string name="category_product">Product Info</string>

    <string name="category_supplier">Supplier Info</string>

    <string name="hint_name">Product Name</string>

    <string name="hint_quantity">Quantity</string>

    <string name="hint_price">Price</string>

    <string name="hint_sale">Sales</string>

    <string name="hint_supplier">Supplier Name</string>

    <string name="hint_supplier_email">Supplier E-mail</string>

    <string name="unit_price">$</string>

    <string name="editor_insert_product_successful">Product saved</string>

    <string name="editor_update_product_successful">Product updated</string>

    <string name="editor_insert_product_failed">Error with saving product</string>

    <string name="editor_update_product_failed">Error with updating product</string>

    <string name="empty_view_title_text">Store seems empty…</string>

    <string name="empty_view_subtitle_text">Get started by adding a product</string>

    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <string name="discard">Discard</string>

    <string name="keep_editing">Keep Editing</string>

    <string name="editor_delete_product_successful">Product deleted</string>

    <string name="editor_delete_product_failed">Error with deleting product</string>

    <string name="editor_delete_all_products_successful">All products deleted</string>

    <string name="editor_delete_all_products_failed">Error with deleting all products</string>

    <string name="delete_dialog_msg">Delete this product?</string>

    <string name="delete_all_dialog_msg">Are you sure you want to delete ALL products?</string>

    <string name="delete">Delete</string>

    <string name="cancel">Cancel</string>

    <string name="sale">Sell</string>

    <string name="quantity_limit">Quantity can\'t be lower than 0!</string>

    <string name="order">Order</string>

    <string name="select_image">Select image</string>

    <string name="missing_name">Error with saving product. Name of the product is missing.</string>

    <string name="missing_price">Error with saving product. Price of the product is missing.</string>

    <string name="missing_image">Error with saving product. Image is missing.</string>

    <string name="quantity_info">Quantity: </string>

    <string name="price_info">Price: </string>

    <string name="change_quantity">Change Quantity</string>
</resources>
