<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin"
        tools:context=".EditorActivity">


        <ImageView
            android:id="@+id/image_editor"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:src="@drawable/image_add" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="16dp">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_product" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="4dp">

                <EditText
                    android:id="@+id/edit_name"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_name"
                    android:inputType="textCapWords" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:paddingLeft="4dp">

                        <EditText
                            android:id="@+id/edit_price"
                            style="@style/EditorFieldStyle"
                            android:hint="@string/hint_price"
                            android:inputType="number" />

                        <TextView
                            style="@style/EditorUnitsStyle"
                            android:text="@string/unit_price" />
                    </RelativeLayout>
                </LinearLayout>

                <EditText
                    android:id="@+id/edit_quantity"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_quantity"
                    android:inputType="number" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="removeQuantity"
                android:text="-" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/change_quantity"
                android:textAppearance="?android:textAppearanceMedium" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="addQuantity"
                android:text="+" />

        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="16dp"
            tools:context=".EditorActivity">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/CategoryStyle"
                    android:text="@string/category_supplier" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical"
                    android:paddingLeft="4dp">

                    <EditText
                        android:id="@+id/edit_supplier"
                        style="@style/EditorFieldStyle"
                        android:hint="@string/hint_supplier"
                        android:inputType="textCapWords" />

                    <EditText
                        android:id="@+id/edit_supplier_email"
                        style="@style/EditorFieldStyle"
                        android:hint="@string/hint_supplier_email"
                        android:inputType="textEmailAddress" />

                </LinearLayout>
            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:onClick="orderProduct"
                android:text="@string/order" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>