<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin">

    <ImageView
        android:id="@+id/image_catalog"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:scaleType="centerCrop"/>

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/image_catalog"
        android:fontFamily="sans-serif-medium"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="#2B3D4D"
        tools:text="Bread" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_toRightOf="@id/image_catalog"
        android:paddingLeft="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:paddingRight="4dp"
            android:text="@string/price_info"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:textAppearance="?android:textAppearanceMedium"
            tools:text="12" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:paddingLeft="4dp"
            android:text="$"
            android:textAppearance="?android:textAppearanceMedium" />
    </LinearLayout>

    <Button
        android:id="@+id/sell_button"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:focusable="false"
        android:text="@string/sale" />

    <LinearLayout
        android:id="@+id/quantity_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/sell_button"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="8dp"
            android:text="@string/quantity_info"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:id="@+id/quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:textAppearance="?android:textAppearanceMedium"
            tools:text="100" />
    </LinearLayout>

</RelativeLayout>